Made this file easer to read, someone should really write some stuff in here

--- a/localisation/KR_Terrain_l_english.yml
+++ b/localisation/KR_Terrain_l_english.yml
@@ -9,26 +9,34 @@ edinburgh_desc:0 ""
 
 tbilisi:0 "Urban"
 tbilisi_desc:0 ""
+
 ankara:0 "Urban"
 ankara_desc:0 ""
 
 hamburg:0 "Urban"
 hamburg_desc:0 ""
+
 munich:0 "Urban"
-munich_desc:0 "" 
+munich_desc:0 ""
+
 dresden:0 "Urban"
-dresden_desc:0 "" 
+dresden_desc:0 ""
+
 breslau:0 "Urban"
-breslau_desc:0 ""  
+breslau_desc:0 ""
+
 danzig:0 "Urban"
 danzig_desc:0 ""
+
 leipzig:0 "Urban"
 leipzig_desc:0 ""
+
 berlin:0 "Urban"
 berlin_desc:0 ""
 
 stockholm:0 "Urban"
 stockholm_desc:0 ""
+
 goteburg:0 "Urban"
 goteburg_desc:0 ""
 
@@ -43,13 +51,16 @@ prague_desc:0 ""
 
 berne:0 "Urban"
 berne_desc:0 ""
+
 zurich:0 "Urban"
 zurich_desc:0 "" 
 
 detroit:0 "Urban"
 detroit_desc:0 ""
+
 philadelphia:0 "Urban"
 philadelphia_desc:0 ""
+
 pittsburgh:0 "Urban"
 pittsburgh_desc:0 ""
 
@@ -197,15 +208,19 @@ warsaw_desc:0 ""
 ### Hills ###
 gibraltar:0 "Hills"
 gibraltar_desc:0 ""
+
 kobe:0 "Hills"
 kobe_desc:0 ""
+
 vlore:0 "Hills"
 vlore_desc:0 ""
 
 bergen:0 "Hills"
 bergen_desc:0 ""
+
 ljubljana:0 "Hills"
-ljubljana_desc:0 "" 
+ljubljana_desc:0 ""
+
 trondheim:0 "Hills"
 trondheim_desc:0 ""  
 
@@ -218,24 +233,31 @@ anzio_desc:0 ""
 ### Plains ###
 plovdiv:0 "Plains"
 plovdiv_desc:0 ""
+
 tirana:0 "Plains"
 tirana_desc:0 ""
+
 malta:0 "Plains"
-malta_desc:0 "" 
+malta_desc:0 ""
+
 malmo:0 "Plains"
 malmo_desc:0 ""
+
 falun:0 "Plains"
 falun_desc:0 ""
 
 rotterdam:0 "Plains"
 rotterdam_desc:0 ""
+
 brussels:0 "Plains"
 brussels_desc:0 ""
 
 pecs:0 "Plains"
 pecs_desc:0 ""
+
 namur:0 "Plains"
 namur_desc:0 ""
+
 spokane:0 "Plains"
 spokane_desc:0 ""
 
@@ -324,6 +346,8 @@ sion_desc:0 ""
 
 brunei:0 "Jungle"
 brunei_desc:0 "" 
+
+### Generic ###
 
 unknown:0 "Unknown"
 unknown_desc:0 ""
