--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -67,7 +67,7 @@ part.23.d:0 "The Russian Empire has imposed Grand Duke Boris as the new King of 
 part.23.a:0 "Long live Wilhelm V!"
 
 part.24.t:0 "The darkest hour of the German Empire"
-part.24.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters in Asia with Japan. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Japaneese empire is the transfer of all our remaining territories in Asia to them."
+part.24.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters in Asia with Japan. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Japanese empire is the transfer of all our remaining territories in Asia to them."
 part.24.a:0 "Capitulate."
 
 part.25.t:0 "The Darkest Hour of the German Empire"
