Localisation for the new partition events

--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -430,12 +430,180 @@ part.97.d:0 "The people flocked to the polling stations and have made their deci
 part.97.a:0 "Western Flanders-Wallonia belongs to us!"
 part.97.b:0 "Western Flanders-Wallonia belongs to Flanders-Wallonia!"
 
+part.98.t:0 "A loyal government in Paris"
+part.98.d:0 "The new government of France is firmly under our control and continental France is now a loyal member of our alliance. Hopefully this will end the bloodshed in Europe once and for all."
+part.98.a:0 "Pax Europa!"
+
+part.99.t:0 "Choosing the new french Head of State"
+part.99.d:0 "We have the opportunity to install a member of the house of Romanov as the new King of France. It may be wise, however, to let the French choose their own government."
+part.99.a:0 "Prince Ioann Konstantinovich will be Charles XI!"
+part.99.b:0 "Let french decide, as long as they stay loyal."
+
+part.100.t:0 "A new king"
+part.100.d:0 "Russian Empire has imposed Prince Ioann Konstantinovich as the new French King. There's nothing we can do, we have to fold and become kingdom again."
+part.100.a:0 "Long live Charles XI!"
+
+part.101.t:0 "Forces armées françaises"
+part.101.d:0 "Form up the Active Defense!"
+part.101.a:0 "Form Up the Troops!"
+
+part.102.t:0 "Loyal governments in the new French states"
+part.102.d:0 "The governments of the new French states are firmly under our control and their countries are now loyal members of our alliance. Hopefully, this will end the bloodshed in Europe once and for all."
+part.102.a:0 "Pax Europa!"
+
+part.103.t:0 "A loyal puppet in Paris?"
+part.103.d:0 "We have partitioned parts of the French mainland between the new nations of Brittany, Normandy and Occitania. What should we do with the remaining provinces? Should we create a fake French state and install another loyal government or should we directly rule over Paris and the other provinces? We could also give the remaining lands to the new nations, even if they can not claim them as national provinces."
+part.103.a:0 "Set up a friendly French Government."
+part.103.b:0 "Further divide the French lands between the new countries!"
+part.103.c:0 "Total conquest is preferable."
+
+part.104.t:0 "France renounces her claims"
+part.104.d:0 "We will renounce our claims on the lands rightfully owned by Brittany, Normandy and Occitania."
+part.104.a:0 "We have to obey."
+
+part.105.t:0 "Choosing the new Head of State of Bretagne"
+part.105.d:0 "We have the opportunity to install a member of the house of Romanov as the new Grand Duke of Bretagne. It may be wise, however, to let the Bretons choose their own government."
+part.105.a:0 "Prince Gabriel Konstantinovich will be new Grand Duke!"
+part.105.b:0 "Let the Bretons decide, as long as they stay loyal."
+
+part.106.t:0 "A new Grand Duke"
+part.106.d:0 "The Russian Empire has imposed Prince Gabriel Konstantinovich as the new Grand Duke of Bretagne. There's nothing we can do, we have to fold and become a Grand Duchy."
+part.106.a:0 "Long live Grand Duke Gabriel!"
+
+part.107.t:0 "Choosing the new Head of State of Normandy"
+part.107.d:0 "We have the opportunity to install a member of the house of Romanov as the new Grand Duke of Normandy. It may be wise, however, to let the Normans choose their own government."
+part.107.a:0 "Princess Tatiana Konstantinovna will be new Grand Duchess!"
+part.107.b:0 "Let the Normans decide, as long as they stay loyal"
+
+part.108.t:0 "A new Grand Duchess"
+part.108.d:0 "Russian Empire has imposed Princess Tatiana Konstantinovna as new Grand Duchess of Normandy. There's nothing we can do, we have to fold and become a Grand Duchy."
+part.108.a:0 "Long live Grand Duchess Tatiana!"
+
+part.109.t:0 "Choosing the new Head of State of Occitania"
+part.109.d:0 "We have the opportunity to install a member of the house of Romanov as the new Grand Duke of Occitania. However, it may be wise to let the Occitans choose their own government."
+part.109.a:0 "Prince Vladimir Pavlovich will be new Grand Duke!"
+part.109.b:0 "Let the Occitans decide, as long as they stay loyal."
+
+part.110.t:0 "A new Grand Duke"
+part.110.d:0 "Russian Empire has imposed Prince Vladimir Pavlovich as the new Grand Duke of Occitania. There's nothing we can do, we have to fold and become a Grand Duchy."
+part.110.a:0 "Long live Charles XI!"
+
+part.111.t:0 "Loyal governments in the new French states"
+part.111.d:0 "The governments of the new French states are firmly under our control and their countries are now loyal members of our alliance. Hopefully, this will end the bloodshed in Europa once and for all."
+part.111.a:0 "Pax Europa!"
+
+part.112.t:0 "A loyal government in Paris"
+part.112.d:0 "The new government of France is firmly under our control and continental France is now a loyal member of our alliance. Hopefully, this will end the bloodshed in Europa once and for all."
+part.112.a:0 "Pax Europa!"
+
+part.113.t:0 "France renounces her claims"
+part.113.d:0 "We will renounce our claims on the lands rightfully owned by Brittany and Normandy."
+part.113.a:0 "We have to obey."
+
+part.114.t:0 "An alliance with Russia in exchange for our lands"
+part.114.d:0 "Russia defeated the Commune of France and they said they will give us back our provinces if we join their alliance."
+part.114.a:0 "A great deal!"
+part.114.b:0 "We will never accept your proposal!"
+
+part.115.t:0 "Honour the deal"
+part.115.d:0 "In accordance with our agreement we are now giving the French provinces we conquered back to the French government."
+part.115.a:0 "We have to obey."
+
+part.116.t:0 "Honour the deal"
+part.116.d:0 "We will now honour the deal and enter an alliance with Germany."
+part.116.a:0 "It's a good deal."
+
 part.10.t:0 "The Fate of Britain"
 part.10.d:0 "After defeating the Union of Britain, we now control Great Britain. Many officials have called for the restoration of the United Kingdom, with its political future to be decided at a later time. The remaining minority has proposed that we consider a partition of the island. What shall we do?"
 part.10.c:0 "Let us consider a partition."
 part.10.a:0 "Create a loyal Britain."
 part.10.b:0 "Our loyal allies from Canada will return to Britain!"
 part.10.e:0 "Total occupation of Great Britain!"
+
+part.117.t:0 "A loyal government in London"
+part.117.d:0 "The new government of Britain is firmly under our control."
+part.117.a:0 "Pax Europa!"
+
+part.118.t:0 "Should Britain become a monarchy?"
+part.118.d:0 "As we are establishing the new government of Great Britain we have the opportunity to install a new King of Great Britain. It may, however, be wise to let the British choose their own government lest they rise against us."
+part.118.a:0 "Recreate the United Kingdom!"
+part.118.b:0 "Let Great Britain become a republic instead."
+
+part.119.t:0 "Russia has imposed a King on us"
+part.119.d:0 "We will become a monarchy again."
+part.119.a:0 "Long live Wiliam IV!"
+
+part.120.t:0 "Russia let us choose our new President"
+part.120.d:0 "We are a Republic once again."
+part.120.a:0 "All hail our new president!"
+
+part.121.t:0 "England"
+part.121.d:0 "England is the industrial and overall economic heartland of Great Britian. An occupied England would be a logistical nightmare because of the immense size of the London metropolitan area. Instead, we can establish a puppet state in England. What should we do?"
+part.121.a:0 "Establish a friendly England."
+part.121.b:0 "Total occupation of England!"
+
+part.122.t:0 "Freedom!"
+part.122.d:0 "We are once again free. Under Russian supervision."
+part.122.a:0 "What happened to the Union of 1707?"
+
+part.123.t:0 "Freedom!"
+part.123.d:0 "We are once again free. Under Russian supervision."
+part.123.a:0 "What happened to the Union of 1707?"
+
+part.124.t:0 "A loyal puppet in London"
+part.124.d:0 "The new government of England is under our control!"
+part.124.a:0 "Pax Europa!"
+
+part.125.t:0 "Wales"
+part.125.d:0 "The Welsh people have been under direct English rule for several centuries but because of its extensive coal deposits we have kept it detached from England and several magnates wish to keep it this way. However, as England is now a free nation, Wales could just as well become one too but its economy would fairly weak. Because of that several ministers have suggested that we return it to England. What should we do?"
+part.125.a:0 "Freedom for the Welsh!"
+part.125.b:0 "Return it to England."
+part.125.c:0 "Total occupation of Wales!"
+
+part.126.t:0 "Freedom!"
+part.126.d:0 "Wales is finally free from English tyranny !"
+part.126.a:0 "And it's all thanks to the Russians!"
+
+part.127.t:0 "A loyal puppet in Cardiff"
+part.127.d:0 "The new government of Wales is under our control! Wales is finally free after centuries of English oppression and is now under the protection of the Russian state!"
+part.127.a:0 "Pax Europa!"
+
+part.128.t:0 "The return of Wales"
+part.128.d:0 "The Russian state decided to return the territory of Wales to the English state."
+part.128.a:0 "Welcome back!"
+
+part.129.t:0 "Scotland"
+part.129.d:0 "Scotland is the remaining area of Great Britain that we have to decide what to do with. Economically it is much weaker than England and the population is more rural. Some regional separatists wish independence under our protection. An occupation is being called upon by hardliners but there seems to be little to gain in doing so. What should we do?"
+part.129.a:0 "Establish a friendly Scotland."
+part.129.b:0 "Total occupation of Scotland!"
+
+part.130.t:0 "Freedom!"
+part.130.d:0 "Thanks to russian liberators we are once again free!"
+part.130.a:0 "We will never be the tools of the English again!"
+
+part.131.t:0 "A loyal puppet in Edinburgh"
+part.131.d:0 "The new government of Scotland is under our control! May this be the beginning of a new age of peace for Europe."
+part.131.a:0 "Pax Europa!"
+
+part.132.t:0 "Language question"
+part.132.d:0 "Our policy on the offical language of the Wales has to be formed. While varying areas speak Welsh or English, we need to decide the working language of our government. Welsh is the obvious choice, as we have just received independence after hunderds years of English tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Welsh continues to use English language as their primary language and establishment of Welsh as primary language would greatly upset them. What shall we do ?"
+part.132.a:0 "The government will be bilingual!"
+part.132.b:0 "Use only Welsh for the government."
+
+part.133.t:0 "Language question"
+part.133.d:0 "ur policy on the offical language of the Brittany has to be formed. While varying areas speak Breton or French, we need to decide the working language of our government. Breton is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Breton continues to use French language as their primary language and establishment of Breton as primary language would greatly upset them. What shall we do ?"
+part.133.a:0 "The government will be bilingual!"
+part.133.b:0 "Use only Breton for the government."
+
+part.134.t:0 "Language question"
+part.134.d:0 "Our policy on the offical language of the Normandy has to be formed. While varying areas speak Norman or French, we need to decide the working language of our government. Norman is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Norman continues to use French language as their primary language and establishment of Norman as primary language would greatly upset them. What shall we do ?"
+part.134.a:0 "The government will be bilingual!"
+part.134.b:0 "Use only Norman for the government."
+
+part.135.t:0 "Language question"
+part.135.d:0 "Our policy on the offical language of the Occitania has to be formed. While varying areas speak Occitan or French, we need to decide the working language of our government. Occitan is the obvious choice, as we have just received independence after hunderds years of French tyranny and we need to solidify our national identity if we are to survive. But majority of our population, even if they consider themselves Occitan continues to use French language as their primary language and establishment of Occitan as primary language would greatly upset them. What shall we do ?"
+part.135.a:0 "The government will be bilingual!"
+part.135.b:0 "Use only Occitan for the government."
 
 ### World Tension ###
 occupy_ger:0 "Occupation of Germany"
