Some tweaks for Transamur companies + some descriptions localisation. (Here you go, Zankoas)

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -946,9 +946,11 @@ rrm_fabrica_avioane_set:0 "Fabrica de Avioane SET"
 rrm_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
 
 ### Transamur ###
-dalzavod_heavy_industries:0 "Dalzavod Heavy Industries"
+hino_automobile:0 "Hino Automobile"
 eastern_siberian_railway:0 "Eastern Siberian Railway"
+vladivostok_university:0 "Vladivostok University"
 vladivostok_arsenals:0 "Vladivostok Arsenals"
 dalzavod_heavy_industries_tanks:0 "Dalzavod Tank Industries"
-dalzavod_aircraft_industries:0 "Dalzavod Aircraft Industries"
+siberian_aircraft_industries:0 "Siberian Aircraft Industries"
 dalzavod_naval_industries:0 "Dalzavod Naval Industries"
+nakajima_factory_vladivostok:0 "Nakajima Factory Vladivostok"
