--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -412,7 +412,7 @@ TRM_market_liberal_party:0 "PPM"
 TRM_social_conservative_party:0 "ZKP"
 TRM_authoritarian_democrat_party:0 "MG"
 TRM_paternal_autocrat_party:0 "MG"
-TRM_national_populist_party:0 "IRP"
+TRM_national_populist_party:0 "IRL"
 TRM_totalist_party_long:0 "Far Eastern Totalist Party"
 TRM_radical_socialist_party_long:0 "Transamurian Socialist Party"
 TRM_syndicalist_party_long:0 "Far Eastern Syndicalist Party"
@@ -422,7 +422,7 @@ TRM_market_liberal_party_long:0 "Party of Popular Freedom"
 TRM_social_conservative_party_long:0 "Zemski Krai Party"
 TRM_authoritarian_democrat_party_long:0 "Military Government"
 TRM_paternal_autocrat_party_long:0 "Military Government"
-TRM_national_populist_party_long:0 "Imperial Restoration Party"
+TRM_national_populist_party_long:0 "Imperial Restoration League"
 
 ### Cosmetic ###
 TRM_totalist:0 "Transamur Union"
@@ -504,22 +504,39 @@ TRM_Air_Bases_Vlad:0 "Expand Vladivostok Airbases"
 TRM_Air_Bases_Irk:0 "Expand Irkutsk Airbases"
 TRM_Air_Bases_Nov:0 "Expand Novosibirsk Airbases"
 TRM_Crisis:0 "Anti-Kolchak Coup"
+TRM_Crisis_desc:0 "The thing are going out of control. No matter what happened during the coup, political situation will change greatly. "
 TRM_Kolchak:0 "Reinforce Kolchak's Authority"
+TRM_Kolchak_desc:0 "Kolchak has managed to survive the coup and defeat rebelious generals. However, the spirit of uncertainty mves through Vladivostok. Only the strong leader will pacify the people and restore order in Transamur."
 TRM_Kolchak_Purge:0 "Purge the Army"
+TRM_Kolchak_Purge_desc:0 "To avoid any further coups and rebelions the whole apparatus of military high command must be inspected. No doubt, there is still some haters of Kolchak's government, who must be removed from their offices. However, these harsh measures will disrupt our army for some time."
 TRM_Kolchak_Mil:0 "Vladivostok Arsenals"
+TRM_Kolchak_Mil_desc:0 "The world is close to see the new Weltkrieg will begin soon. This war will test our spirits, so we must be prepared. We must expand our facilities to produce even more equipment."
 TRM_Kolchak_Doc:0 "Supreme Ruler"
+TRM_Kolchak_Doc_desc:0 "Kolchak claims himself as a "Supreme Ruler of Russia". To looks like this character, he need strong propaganda machine. Everyone should know about his glorious persona and great deeds. Kolchak must be seen as Father-of-the-state in eyes of his people."
 TRM_Mil:0 "New Military Cabinet"
-TRM_Mil_Doc:0 "Military Reformations"
+TRM_Mil_desc:0 "Kolchak is dead and new dictatorship has risen. It will take some time to reorganise the government and legitimise the new dictator."
+TRM_Mil_Doc:0 "Military Reformation"
+TRM_Mil_Doc_desc:0 "Every dictatorship rely on it's army. Some reforms must be taken to improve quality of our army. Only the loyal and skilled guns will save us."
 TRM_Mil_Inf:0 "Buy Modern Equipment"
+TRM_Mil_Inf_desc:0 "Our equipment is pretty outdated. We should some from the great powers. Maybe, they will even sell us some blueprints, so we can produce new equipment on our own."
 TRM_Mil_ML_End:0 "Political Stabilisation"
+TRM_Mil_ML_End_desc:0 "The situation has finally stabilised. Nobody can argued our legitimacy, our borders are protected by the strong and modern army. People have learnt how to be modest and not to waste their money and efforts on pity things. The order has returned to Transamur."
 TRM_Yui_Focus:0 "Japanese Lapdog"
+TRM_Yui_Focus_desc:0 "Japanese was never welcomed in Transamur. News about new Japanese administration, leading by old general Mitsue, have arrived to Vladivostok shocked everyone. It will take a long time and many efforts to legitimise this lapdog in people's eyes."
 TRM_Yui_Jap:0 "Japanisation"
+TRM_Yui_Jap_desc:0 "So, we now metaphorically stands on solid ground. It's time to make the first steps toward Japanisation of the whole region. First wave of Japanese colonists has already arrived. Teachers, doctors, engineers, their deeds will help us significantly."
 TRM_Yui_Fac:0 "Invite Japanese Workers"
+TRM_Yui_Fac_desc:0 "The colonisation programme must be already in progress. Soon, the thousands of hungry poor Japanese will flee to our country in search of work. Cheap workforce and dotation from mainland means new facilities and new capabilities"
 TRM_Yui_End:0 "Japanese Propaganda"
+TRM_Yui_End_desc:0 "Russian's resistance to our cultural assimilation is even stronger than we have predicted. So, we should do anything to prevent them to speak Russian, listen Russian, and even think in Russian. We should start a massive propaganda campaign to teach finally assimilate them."
 TRM_Rep:0 "Democracy Prevails"
+TRM_Rep_desc:0 "We have finally achieved our freedom. No more dictators, no more mad militarists. It's time for true democracy to rise and wipe all the presence of autocrats."
 TRM_Rep_Res:0 "Invests in Science"
+TRM_Rep_Res_desc:0 "Science is everything nowdays. We should invest some money in our great minds. If we create a proper work conditions for them, their efforts will be even more effective."
 TRM_Rep_Fac:0 "Invests in Industry"
+TRM_Rep_Fac_desc:0 "Further investitions will allow us to expand our facilities and make our industry more productive. Many new workplaces can be created, what means many people will find a stable jobs."
 TRM_Rep_Goods:0 "Build Up a Welfare State"
+TRM_Rep_Goods_desc:0 "True democracy means that every citizen of our country deserve the best. By introducing the welfare system, we will gain many respects form our people. Happy population will work harder and demand less, what mean a prosperity for all of us."
 TRM_Pol_Research:0 "Major Educational Reform"
 TRM_Expand_RCW:0 "Turmoil in Siberia"
 TRM_FE_SIB:0 "Siberia is Vulnerable"
@@ -534,7 +551,7 @@ TRM_Claim_West_Sib:0 "Go West"
 TRM_Integrate_West_Sib:0 "Integrate West Siberia"
 TRM_Cap_Novosibirsk:0 "Move Capital to Novosibirsk"
 TRM_Claim_Russia:0 "Final Solution"
-TRM_Leave_Russia:0 "Leave Japanese Sphere of Influence"
+TRM_Leave_Japan:0 "Leave Japanese Sphere of Influence"
 TRM_Become_Russia:0 "Become Russia"
 
 ### Tooltips ###
