added new unit events for CAR and CNT

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -39,6 +39,8 @@ SPR_become_CAR:0 "§Y[SPR.GetNameDef]§! becomes §Y[CAR.GetNameDef]§!\n"
 SPR_cancel_election:0 "The elections will be §Rcanceled§!\n"
 SPR_reinforce_madrid:0 "Reserve units are called up in §YMadrid§!\n"
 SPR_workers_rise:0 "Mine and road workers rise up to support the cause!\n"
+SPR_foreign_unit_arrives:0 "Foreign-trained unit arrives in Barcelona\n"
+SPR_supplied_unit_arrives:0 "Supplied militia unit arrives in Burgos\n"
 
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
@@ -338,6 +340,14 @@ sprc.207.t:0 "Workers Rise Up"
 sprc.207.d:0 "Our efforts at organizing and building along the coast are paying off. The workers have risen to stand with us, and our secret work at building forts in the old castles and watch posts have come to fruition."
 sprc.207.a:0 "Huzzah!"
 
+sprc.208.t:0 "Returning from France"
+sprc.208.d:0 "The exiles who have been training in France have returned!"
+sprc.208.a:0 "For the revolution!"
+sprc.209.t:0 "Returning from Southern Italy"
+sprc.209.d:0 "The exiles who have been training in [SRI.GetNameDef] have returned!"
+sprc.210.t:0 "Returning from Britain"
+sprc.210.d:0 "The exiles who have been training in the Union of Britain have returned!"
+
 ### Post-War ###
 
 sprc.220.t:0 "Victory!"
@@ -365,6 +375,12 @@ sprc.302.a:0 "Good."
 sprc.303.t:0 "The End of the Spanish War"
 sprc.303.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.303.a:0 "Great!"
+
+sprc.304.t:0 "Portuguese Supplies and Arms"
+sprc.304.d:0 "With our trade deal with Portugal, we have been able to stockpile some arms and supplies to outfit a well-equipped militia unit."
+sprc.304.a:0 "For Xavier and the Pope!"
+sprc.305.t:0 "Italian Supplies and Arms"
+sprc.305.d:0 "With our trade deal with [ITA.GetNameDef], we have been able to stockpile some arms and supplies to outfit a well-equipped militia unit."
 
 ### Post-War ###
 
