Expelling Japanese Bandits is now possible, with consequences.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -16,6 +16,7 @@ FNG_Land_Reform_Underway:0 "Land Reform Underway"
 FNG_Japanese_Aid_Cut:0 "Japanese Aid Cut"
 FNG_Buying_Silver:0 "Buying Silver"
 FNG_Central_Bank_Collapse:0 "Central Bank Collapse"
+FNG_Japanese_Military_Mission:0 "Japanese Military Mission"
 
 ### Informal Empire Mechanic ###
 FNG_informal_empire_1:0 "Expel the Japanese Bandits!"
@@ -23,6 +24,10 @@ FNG_informal_empire_2:0 "Preservation of the Xinhai Order"
 FNG_informal_empire_3:0 "Mantetsu Influence"
 FNG_informal_empire_4:0 "Pervasive Mantetsu Influence"
 FNG_informal_empire_5:0 "Mantetsu Dominance"
+
+### Tooltips ###
+
+FNG_expel_japanese_officers_tooltip:0 "Completing this focus will have dire consequences for Fengtian's relationship with Japan. \n"
 
 ### Parties ###
 FNG_totalist_party:0 "Manchu Communist Party"
@@ -234,7 +239,7 @@ FNG_Reorganize_the_Coastal_Defence_Forces:0 "Reorganise the Coastal Defence Forc
 FNG_Reorganize_the_Coastal_Defence_Forces_desc:0 "Because the Fengtian Navy has no realistic way of opposing the larger and newer navy fielded by Qing, its main purpose is coastal defence. In light of recent troubling inadequacies, such as one ship's crew selling their armament, extensive reorganisation and reform is necessary."
 FNG_Expand_Yingkou_Naval_Yard:0 "Expand Yingkou Naval Yard"
 FNG_Expand_Yingkou_Naval_Yard_desc:0 "Yingkou is the Northeast Region's second largest port, after Japanese-held Dalian, and the home of our Navy. If we are to begin any meaningful naval reconstruction project, expansion of the Yingkou Naval Yard is an essential first step."
-FNG_The_Nine_Points_Strategy:0 "The Eight Points Strategy"
+FNG_The_Nine_Points_Strategy:0 "The Nine Points Strategy"
 FNG_The_Nine_Points_Strategy_desc:0 "The severe asymmetry in strength between the Fengtian and Qing navies means that, in the absence of Japanese support, our entire coast will be at risk of invasion. Japanese strategists have outlined nine positions at which naval landings are most likely, and drafted plans for their defence."
 FNG_Regular_River_Patrols:0 "Regular River Patrols"
 FNG_Regular_River_Patrols_desc:0 "The Navy possesses number of small patrol boats, occasionally used to police the Yalu and Songhua rivers, but the majority of which are currently rusting away in storage. These might be better used to train our crews and maintain our internal security, if we can find the funding."
@@ -258,7 +263,7 @@ FNG_The_Yanshan_Plan_desc:0 "The most straightforward and realistic strategy for
 FNG_Fortress_Manchuria:0 "Fortress Manchuria"
 FNG_Fortress_Manchuria_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the Shanhai Pass as the only easy point of entry. Man-made fortification could render Manchuria virtually impenetrable."
 FNG_Wu_Wang_Zai_Ju:0 "Wu Wang Zai Ju"
-FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final city, which lead it to reconquer all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
+FNG_Wu_Wang_Zai_Ju_desc:0 "The ancient Chinese idiom 'Forget not what happened in Ju' alludes to the desperate defence of Ju, the state of Qi's final city, from which it lead a successful campaign to reclaim all of its lost territory. Manchuria shall be our Ju, from which we will reconquer all of China!"
 FNG_Jehol_Border_Exercises:0 "Jehol Border Exercises"
 FNG_Jehol_Border_Exercises_desc:0 "Border exercises not only reinforce discipline and training, but also serve to give our troops an intimate knowledge of the land they may soon fight in. As a result, if we are pushed onto the defensive, they can more effectively execute tactics, and call in fire support with extreme precision, as they know the lay of the land."
 FNG_Golden_Dragon_Cigarettes:0 "Golden Dragon Cigarettes"
@@ -730,8 +735,8 @@ fengtian.new.75.t:0 "The State of the Officer Corps"
 fengtian.new.75.d:0 "Fengtian's officer corps is an unusual mix of young Chinese educated at the Rikugun Shikan Gakkō in Japan, older Chinese who served in the Civil Wars, and Japanese officers part of the Military Mission to Fengtian, united by common loyalties to individuals more than any special dedication to the state. Japanese officers in particular are known to prize any station in Fengtian, the devalued currency allowing them to live lives of relative luxury, and hire servants for most menial tasks, earning them the enmity of not only their fellows but also the local population. \n\n Now, with the founding of the Mukden National Academy, these officers have taken the opportunity to mock the academy's current accommodations, specifically a former fabric factory near central Mukden. While a newer modern building rises nearby, the pitiful state of the academy at present leaves the government open to criticism, and much to be desired."
 fengtian.new.75.a:0 "Unfortunate"
 
-fengtian.new.76.t:0 ""
-fengtian.new.76.d:0 ""
+fengtian.new.76.t:0 "Expel Japanese Officers"
+fengtian.new.76.d:0 "INSERT"
 fengtian.new.76.a:0 ""
 
 fengtian.new.77.t:0 ""
@@ -832,7 +837,7 @@ fengtian.new.100.a:0 ""
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
-fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward!"
+fengtian.informalempire.1.d:0 "The time has come to declare our independence, drive the Japanese intruders from China, and end a century of unbearable national humiliation! We will naturally be deprived of foreign material support, but the Chinese people now rally behind us. Onward! Zhonghua Mingguo Wansui!"
 fengtian.informalempire.1.a:0 "Wansui!"
 fengtian.informalempire.2.t:0 "Preservation of the Xinhai Order"
 fengtian.informalempire.2.d:0 "Fengtian is the sole standing government upholding the order established by the Xinhai Revolution in 1911, which called for the overthrow of the Qing and the establishment of a Republic. Although some say that our republican commitments are questionable, and full scale war against the restored Qing is currently unrealistic, the government loudly advocates both goals, as they foster legitimacy in the eyes of all Chinese."
