New England now has elections!

--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -136,13 +136,13 @@ NEE_radical_socialist_party:0 "CSNE"
 NEE_radical_socialist_party_long:0 "Combined Syndicates of New England"
 NEE_syndicalist_party:0 "CSNE"
 NEE_syndicalist_party_long:0 "Combined Syndicates of New England"
-NEE_social_democrat_party:0 "Democrats"
-NEE_social_democrat_party_long:0 "Democratic Party"
-NEE_social_liberal_party:0 "Democrats"
-NEE_social_liberal_party_long:0 "Democratic Party"
-NEE_market_liberal_party:0 "YP"
+NEE_social_democrat_party:0 "Progressive Party"
+NEE_social_democrat_party_long:0 "Progressive Party"
+NEE_social_liberal_party:0 "Working Families Party"
+NEE_social_liberal_party_long:0 "Working Families Party"
+NEE_market_liberal_party:0 "Yankee Party"
 NEE_market_liberal_party_long:0 "Yankee Party"
-NEE_social_conservative_party:0 "FP"
+NEE_social_conservative_party:0 "Federalist Party"
 NEE_social_conservative_party_long:0 "Federalist Party"
 NEE_authoritarian_democrat_party:0 "Military Junta"
 NEE_authoritarian_democrat_party_long:0 "Military Junta"
@@ -219,21 +219,31 @@ neeflavor.15.t:0 "The Great New England Hurricane!"
 neeflavor.15.d:0 "Horrible news! A massive hurricane has struck our nation! This is the first time since 1869 that a hurricane has come to New England, and the repair costs are estimated to be in the hundreds of millions of dollars! Unfortunately, several hundred people have died in the mayhem unleashed by the hurricane."
 neeflavor.15.a:0 "Help the survivors!"
 neeflavor.15.b:0 "We can't help anyone"
-neeflavor.16.t:0 "The 1939 Presidential election"
-neeflavor.16.d:0 "The first free election can now be held in our great nation. The parties that we inherited from before our independence have changed in that the Republican Party has split into a right wing 'Federalist' Party and a left wing 'Yankee' Party and the overall policies of the Democratic party have gone much farther left; comparable to the European Social Democrats. Unlike the American Presidency, there is a limit of three terms, but each term lasts five years. Who will win the presidency?"
-neeflavor.16.a:0 "The Federalist Party wins it!"
-neeflavor.16.b:0 "The Yankee Party wins it!"
-neeflavor.16.c:0 "The Democratic party wins it!"
-neeflavor.17.t:0 "The 1944 Presidential election"
+
+
+neeflavor.16.t:0 "The First Presidential election"
+neeflavor.16.d:0 "With the constitution now in place, the first elections can now be held in New England. Four new parties have formed to try and win the election. The conservatives have formed the Federalist Party lead by Joseph William Martin Jr. While the Yankee Party are running Joseph Kennedy Sr. The Social liberal Working Families party nominated John Gilbert Winant and the Social Democratic Progressive Party have nominated William Averell Harriman.  Who will win this momentous occasion?"
+neeflavor.16.a:0 "The Federalist Party under Joseph W. Martin Jr. win the election!"
+neeflavor.16.b:0 "The Yankee Party under Joseph Kennedy Sr. win the election!"
+neeflavor.16.c:0 "The Working Families Party under John G. Winant win the election!"
+neeflavor.16.e:0 "The Progressive Party under William Averell Harriman win the election!"
+
+
+
+neeflavor.17.t:0 "The second Presidential election"
 neeflavor.17.d:0 "It is time for the next Presidential election, who will win?"
 neeflavor.17.a:0 "The Federalist Party wins it!"
 neeflavor.17.b:0 "The Yankee Party wins it!"
-neeflavor.17.c:0 "The Democratic party wins it!"
+neeflavor.17.c:0 "The Working Families  party wins it!"
+neeflavor.17.e:0 "The Progressive party wins it!"
 neeflavor.18.t:0 "The 1949 Presidential election"
 neeflavor.18.d:0 "It is time for the next Presidential election, who will win?"
 neeflavor.18.a:0 "The Federalist Party wins it!"
 neeflavor.18.b:0 "The Yankee Party wins it!"
-neeflavor.18.c:0 "The Democratic party wins it!"
+neeflavor.18.c:0 "The Working Families  party wins it!"
+neeflavor.18.e:0 "The Progressive party wins it!"
+
+
 neeflavor.19.t:0 "Integration of New England"
 neeflavor.19.d:0 "The civilian population of New England finally accepted the new reality established via military occupation and New England is finally under our firm and complete control."
 neeflavor.19.a:0 "Great!"
